<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CheckSentenceActivity">

    <TextView
        android:id="@+id/inputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_text"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edtSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputText"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/item_edit_text"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="12dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnCheck"
        android:text="@string/check_sentences"
        android:layout_below="@id/edtSearch"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:layout_width="150dp"
        android:layout_alignParentEnd="true"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCheck"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/txtConsonant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_consonant"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/totalConsonant"
            android:layout_below="@id/txtConsonant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtVowels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/totalConsonant"
            android:text="@string/total_vowels"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"/>


        <TextView
            android:id="@+id/totalVowels"
            android:layout_below="@id/txtVowels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"/>


        <TextView
            android:id="@+id/txtNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/totalVowels"
            android:text="@string/total_number"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"/>


        <TextView
            android:id="@+id/totalNumber"
            android:layout_below="@id/txtNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"/>

    </RelativeLayout>


</RelativeLayout>